# cedarcpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  compile_commands.json
cmake/: cedarConfig.cmake.in
docs/specs/: 2026-06-08-cedarcpp-restructure-design.md  2026-06-08-sprint-design.md  2026-06-09-print-simplify-design.md
include/cedar/: image.hpp  print.hpp  print_detail.hpp  s_print.hpp
no_gpu_cpp_vision_tutorial/: CMakeLists.txt  README.md
no_gpu_cpp_vision_tutorial/01_opencv_preprocess/: CMakeLists.txt
no_gpu_cpp_vision_tutorial/02_roi_measure/: README.md
no_gpu_cpp_vision_tutorial/03_onnxruntime_cpu_infer/: CMakeLists.txt
no_gpu_cpp_vision_tutorial/04_infer_interface_stub/: README.md
no_gpu_cpp_vision_tutorial/04_infer_interface_stub/include/: infer_engine.h
no_gpu_cpp_vision_tutorial/04_infer_interface_stub/src/: infer_engines.cpp  main.cpp
no_gpu_cpp_vision_tutorial/05_multithread_pipeline/src/: main.cpp
no_gpu_cpp_vision_tutorial/06_pybind11_infer/: CMakeLists.txt  README.md
no_gpu_cpp_vision_tutorial/06_pybind11_infer/src/: bindings.cpp
no_gpu_cpp_vision_tutorial/07_3d_measurement/src/: plane_fit.cpp  stereo_depth.cpp
no_gpu_cpp_vision_tutorial/build-ort/: .ninja_deps  .ninja_log
no_gpu_cpp_vision_tutorial/build-ort/04_infer_interface_stub/: 04_infer_interface_stub
no_gpu_cpp_vision_tutorial/build-ort/05_multithread_pipeline/: 05_multithread_pipeline
no_gpu_cpp_vision_tutorial/build-ort/07_3d_measurement/: 07_plane_fit  07_stereo_depth
no_gpu_cpp_vision_tutorial/build-py/: .ninja_deps
no_gpu_cpp_vision_tutorial/data/models/: tiny_classifier.onnx  tiny_classifier.onnx.data
no_gpu_cpp_vision_tutorial/docs/: acceptance.md  build.md  troubleshooting.md
no_gpu_cpp_vision_tutorial/scripts/: export_tiny_onnx.py
test/: CMakeLists.txt  test_image.cpp  test_sprint.cpp
test/no_gpu_cpp_vision_tutorial/00_linux_cpp_cmake/: CMakeLists.txt  README.md
test/no_gpu_cpp_vision_tutorial/00_linux_cpp_cmake/src/: scan_files.cpp
test/no_gpu_cpp_vision_tutorial/01_opencv_preprocess/: README.md
test/no_gpu_cpp_vision_tutorial/01_opencv_preprocess/src/: main.cpp
test/no_gpu_cpp_vision_tutorial/02_roi_measure/: CMakeLists.txt
test/no_gpu_cpp_vision_tutorial/02_roi_measure/src/: main.cpp
test/no_gpu_cpp_vision_tutorial/03_onnxruntime_cpu_infer/: README.md
test/no_gpu_cpp_vision_tutorial/03_onnxruntime_cpu_infer/include/: ort_engine.h
test/no_gpu_cpp_vision_tutorial/03_onnxruntime_cpu_infer/src/: main.cpp  ort_engine.cpp
test/no_gpu_cpp_vision_tutorial/04_infer_interface_stub/: CMakeLists.txt
test/no_gpu_cpp_vision_tutorial/05_multithread_pipeline/: CMakeLists.txt  README.md
test/no_gpu_cpp_vision_tutorial/07_3d_measurement/: CMakeLists.txt  README.md
test/no_gpu_cpp_vision_tutorial/build-ort/: build.ninja
test/no_gpu_cpp_vision_tutorial/build-ort/00_linux_cpp_cmake/: 00_scan_files
test/no_gpu_cpp_vision_tutorial/build-ort/01_opencv_preprocess/: 01_opencv_preprocess
test/no_gpu_cpp_vision_tutorial/build-ort/02_roi_measure/: 02_roi_measure
test/no_gpu_cpp_vision_tutorial/build-ort/03_onnxruntime_cpu_infer/: 03_ort_cpu_infer
test/no_gpu_cpp_vision_tutorial/build-py/: .ninja_log  build.ninja
test/no_gpu_cpp_vision_tutorial/common/ng/common/: cli.hpp  fs.hpp  timer.hpp
test/no_gpu_cpp_vision_tutorial/data/pointcloud/: plane.xyz
test/no_gpu_cpp_vision_tutorial/docs/: build_verification.md  design.md  no_gpu_learning_plan.md
test/no_gpu_cpp_vision_tutorial/docs/specs/: 2026-06-08-python-to-cpp-vision-tutorial-design.md
test/no_gpu_cpp_vision_tutorial/scripts/: generate_sample_data.py  run_basic_acceptance.sh  test_pybind11.py
